--- a/Glorious_Options_app/app/views/users/edit.html.erb
+++ b/Glorious_Options_app/app/views/users/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>Edit this user</h1>
+
+<%= form_for @user do |f| %>
+   <%= f.label "Username" %>
+   <%= f.text_field :username %><br />
+   <%= f.label "email" %>
+   <%= f.text_field :email %><br />
+    <%= f.label "password" %>
+   <%= f.text_field :password %><br />
+   <%= f.submit%>
+<% end %>
