--- a/Glorious_Options_app/app/views/users/index.html.erb
+++ b/Glorious_Options_app/app/views/users/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Users List</h1>
+<% @users.each do |user| %>
+<p>USERNAME:  <%= user[:username] %></p>
+<p>EMAIL:  <%= user[:email] %></p>
+<p>PASSWORD:  <%= user[:password] %></p>
+<p><a href="/users/<%=user[:id]%>/edit">Edit</a></p>
+<p>*******************</p>
+<% end %>
